--- a/front/package.json
+++ b/front/package.json
@@ -3,11 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "axios": "^0.18.0",
+    "axios": "^0.18.1",
+    "moment": "^2.24.0",
+    "node-sass": "^4.12.0",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.0.4"
+    "react-scripts": "2.0.4",
+    "react-stopwatch": "^2.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
