--- a/front/package.json
+++ b/front/package.json
@@ -5,9 +5,11 @@
   "dependencies": {
     "axios": "^0.18.1",
     "moment": "^2.24.0",
+    "moment-timezone": "^0.5.26",
     "node-sass": "^4.12.0",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
+    "react-moment": "^0.9.6",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.0.4",
     "react-stopwatch": "^2.0.4"
