--- a/front/package.json
+++ b/front/package.json
@@ -9,6 +9,7 @@
     "moment-timezone": "^0.5.26",
     "node-sass": "^4.12.0",
     "react": "^16.5.2",
+    "react-collapsible": "^2.6.0",
     "react-dom": "^16.5.2",
     "react-materialize": "^3.4.1",
     "react-moment": "^0.9.6",
